--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -4,3 +4,7 @@ ion-title{
   padding: 10px;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+ion-button{
+  font-family: monospace;
+  font-style: oblique;
+}
