--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,6 +10,13 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+<a href="https://imgbb.com/"
+><img
+  src="https://www.bistek.com.br/media/banners/20220606/vinhosdesk.jpg"
+  alt="logo-bistek-removebg-preview"
+/></a>
+
+
   <ion-list *ngFor="let produto of produtos">
     <ion-item>
       <ion-avatar slot="start">
