--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,1 +1,10 @@
 
+ion-title{
+  font-size: 1.5rem;
+  font-style: normal;
+  font-family: monospace;
+  font-weight:bold;
+  align-items: center;
+  padding:13px;
+  color: black;
+  }
