--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,20 +1,54 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <a href="https://imgbb.com/"
-        ><img
+       <img
           src="https://i.ibb.co/XCNytVd/logo-bistek-removebg-preview.png"
-          alt="logo-bistek-removebg-preview"
-      /></a>
+          alt="logo-bistek-removebg-preview"/>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-<a href="https://imgbb.com/"
-><img
-  src="https://www.bistek.com.br/media/banners/20220606/vinhosdesk.jpg"
-  alt="logo-bistek-removebg-preview"
-/></a>
+
+
+<ion-slides>
+<ion-slide>
+<img
+ src="https://www.bistek.com.br/media/banners/20220606/vinhosdesk.jpg"
+  alt="logo-bistek-removebg-preview"/>
+
+</ion-slide>
+<ion-slide>
+<img
+ src="https://www.bistek.com.br/media/banners/20220607/festajuninadesk.jpg"
+  alt="logo-bistek-removebg-preview"/>
+
+</ion-slide>
+
+<ion-slide>
+<img
+ src="https://www.bistek.com.br/media/banners/20220603/facasdesk.jpg"
+  alt="logo-bistek-removebg-preview"/>
+
+</ion-slide>
+<ion-slide>
+<img
+ src="https://www.bistek.com.br/media/banners/20220603/sadiadesk.jpg"
+  alt="logo-bistek-removebg-preview"/>
+ 
+</ion-slide>
+
+
+  <ion-slide>
+  <img
+   src=" https://www.bistek.com.br/media/banners/20220406/brfdesk.jpg"
+    alt="logo-bistek-removebg-preview"/>
+  
+  </ion-slide>
+
+
+</ion-slides>
+
+
 
 
   <ion-list *ngFor="let produto of produtos">
