--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,7 +10,7 @@
 <ion-content>
 
 
-<ion-slides>
+<ion-slides pager="true" [options]='slideOpts' title="Arraste pro lado">
 <ion-slide>
 <img
  src="https://www.bistek.com.br/media/banners/20220606/vinhosdesk.jpg"
