--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content padding class="background">
 
 
 <ion-slides pager="true" [options]='slideOpts' title="Arraste pro lado">
