3 files modified, 1 added, 1 deleted

--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -8,3 +8,11 @@ ion-title{
   padding:13px;
   color: black;
   }
+
+  ion-content.background{
+    background-image: url(../~/src/app/assets/back.png);
+    background-repeat: no-repeat;
+    background-size: cover
+
+
+  };
