--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,16 +6,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding class="background">
 
-<ion-content>
-<ion-list  inset>
-<button  ion-item *ngFor="let item of items" (click)="SelecionarItem(item)">
-  {{item}}
-</button>
-</ion-list>
-</ion-content>
+
 
 
 
 </ion-content>
+
+
+
+
