--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,12 +6,12 @@
     <ion-label>Inicio</ion-label>
   </ion-tab-button>
 
-  <ion-tab-button tab="tab2">
+  <ion-tab-button tab="tab2" title="Cadastrar Produtos">
     <ion-icon name="list"></ion-icon>
     <ion-label>Cadastrar Produtos</ion-label>
   </ion-tab-button>
 
-  <ion-tab-button tab="tab3">
+  <ion-tab-button tab="tab3" title="Acessar Carrinho">
     <ion-icon name="cart"></ion-icon>
     <ion-label>Carrinho</ion-label>
   </ion-tab-button>
