--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Carrinho    <ion-icon name="cart"></ion-icon>
+      Carrin  <ion-icon name="cart"></ion-icon>
     </ion-title>
   </ion-toolbar>
 </ion-header>
